# stanley

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
codegen/: README.md  __init__.py  __main__.py  cli.py  exceptions.py  generator.py  models.py  parser.py  setup.py  templates.py
examples/: 01-simple_agent.py  02-terminal_agent.py  Untitled.ipynb
examples/ai-news-summarizer/: agent.py  system_prompt.txt
examples/ai-news-summarizer/tools/: readblogpost.py  searchlinkedin.py  tools.yml
stanley/: __init__.py  agent.py  base_tool.py  history.py  tools.py
stanley/prompts/: system-prompt.txt
stanley/tools/: __init__.py  agent_end_task.py  google_search.py  send_message.py
tests/: test_agent.py  test_base_tool.py  test_history.py  test_integration.py  test_send_message_tool.py  test_tools.py
